# component-future

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
tests/: basic.rs  errors.rs  processing.rs
tests/run/: mod.rs
